# bevy_svg

./: Cargo.toml
examples/: twinkle.rs  two_colors_bytes.rs  two_colors_reader.rs
examples/2d/: complex_one_color.rs  twinkle.rs  two_colors.rs  two_colors_bytes.rs  two_colors_reader.rs  two_colors_visibility.rs
examples/3d/: complex_one_color.rs  twinkle.rs  two_colors.rs
src/: lib.rs  plugin.rs  svg.rs  utils.rs
